--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  * @LastEditors: NMTuan
  * @Description: 
  * @FilePath: \math_test_questions_generator\index.html
---><!DOCTYPE html><!-- This web page is copied by "https://bazhan.wang" --><html lang="en"><head><meta name="baidu-analysis-id" content="1i35331k2p1h3b2p"><meta charset="utf-8">
+<html lang="en"><head><meta name="baidu-analysis-id" content="1i35331k2p1h3b2p"><meta charset="utf-8">
         
         <link rel="icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--!‫‭‪‭‪‏‭‪‭‫‭‬‬‎‫‫‬‏‭‫‏‬‎‫-->
